# polymarket

./: .gitignore  AGENTS.md  Makefile  WORKFLOW.md  pyproject.toml
docs/: SYMPHONY.md  architecture.md  linear-track.md
docs/handoffs/: polymarket-paper-maker-arb-run.md
docs/plans/: paper-maker-inventory-exits-and-round-trip-pnl.md  paper-maker-risk-controls-and-fill-quality.md  polymarket-paper-maker-arb-run.md
polymarket_paper/: __init__.py  adapters.py  arbitrage.py  cli.py  dashboard.py  filters.py  guardrails.py  journal.py  report.py  risk.py  runner.py  simulator.py  timeutils.py
scripts/: open-symphony-workspace  setup-linear-workflow-states.mjs
scripts/symphony/: start
tests/: test_arbitrage.py  test_entry_gating.py  test_filters.py  test_replay_dashboard.py  test_simulator.py
