[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-paper"
version = "0.1.0"
description = "Paper-only Polymarket market-structure research scaffold"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["polymarket_paper*"]
